k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: wordpress:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "200m"      # Requête de CPU (200 milliCPU)
              memory: "512Mi"   # Requête de mémoire (512 MiB)
            limits:
              cpu: "500m"      # Limite de CPU (500 milliCPU)
              memory: "1Gi"    # Limite de mémoire (1 GiB)
