k8s/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu: "200m"      # Requête de CPU (200 milliCPU)
              memory: "512Mi"   # Requête de mémoire (512 MiB)
            limits:
              cpu: "500m"      # Limite de CPU (500 milliCPU)
              memory: "1Gi"    # Limite de mémoire (1 GiB)
