k8s/netdata.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netdata
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netdata
  template:
    metadata:
      labels:
        app: netdata
    spec:
      containers:
        - name: netdata
          image: netdata/netdata:latest
          ports:
            - containerPort: 19999
---
apiVersion: v1
kind: Service
metadata:
  name: netdata
  namespace: production
spec:
  selector:
    app: netdata
  ports:
    - protocol: TCP
      port: 19999
      targetPort: 19999
  type: ClusterIP
