k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
  - port: 80  # Anciennement 8080
    targetPort: 80
  selector:
    app: backend
